targets/srv0/k3s/ntfy/ntfy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  namespace: base
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ntfy
  template:
    metadata:
      labels:
        app: ntfy
    spec:
      securityContext:
        fsGroup: $MY_UID
      containers:
      - name: ntfy
        image: binwiederhier/ntfy:v2.26.0
        securityContext:
          allowPrivilegeEscalation: false
        args: ["serve"]
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: 2Gi
          requests:
            memory: 128Mi
        readinessProbe:
          httpGet:
            path: /v1/health
            port: 3000
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
        volumeMounts:
        - name: ntfy-data
          mountPath: /home/ntfy
        - name: ntfy-config
          mountPath: /etc/ntfy
          readOnly: true
      volumes:
      - name: ntfy-data
        persistentVolumeClaim:
          claimName: ntfy-pvc
      - name: ntfy-config
        secret:
          secretName: ntfy-server-config
---
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: base
spec:
  selector:
    app: ntfy
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
